<resources>
    <string name="app_name">NutriBright</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dieticians">Dietitians</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="select_category">Select Category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="news_feed">Feed</string>
    <string name="source">Sources</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="category">Category</string>
    <string name="dietitians">Dietitians</string>
    <string name="test_title">What is Lorem Ipsum</string>
    <string name="test_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifications</string>
    <string name="switchOFF">check to stop receiving notifications</string>
    <string name="switchON">uncheck to stop receiving notifications</string>
    <string name="developer">Developer</string>
    <string name="anonymous">Anonymous</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="feedback_summary">Send us your feedback</string>
    <string name="feedback_key">feedback</string>
    <string name="feedback">Feedback</string>
    <string name="mail">mailto:alexfreeman221@gmail.com</string>
    <string name="consult">Consult Dietitian</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="plans">Plans</string>
    <string name="name">Name</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (cm)</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="diet_tools">Diet Tools</string>
    <string name="bmi">Body Mass Index (BMI)</string>
    <string name="bmr">Basal Metabolic Rate (BMR)</string>
    <string name="calc_bmi">Calculate BMI</string>
    <string name="calc_bmr">Calculate BMR</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="subscribed_plans">Subscribed Plans</string>
    <string name="no_plan">You have not subscribed to any plans yet</string>
</resources>
