<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_rss_feed"
            android:title="@string/news_feed" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_source"
            android:icon="@drawable/ic_list"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_list"
            android:title="@string/plans" />

        <item
            android:id="@+id/nav_subscribed_plans"
            android:icon="@drawable/ic_favorite"
            android:title="@string/subscribed_plans" />

        <item
            android:id="@+id/nav_dietitian"
            android:icon="@drawable/ic_people"
            android:title="@string/dietitians"/>

        <item
            android:id="@+id/nav_diet_tools"
            android:icon="@drawable/ic_tools"
            android:title="@string/diet_tools"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <!--<group>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/share" />-->

    <!--</group>-->

</menu>
