<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginBottom="25dp"
            android:inputType="textEmailAddress"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:id="@+id/password_confirmation"
            android:hint="@string/password_confirm"
            android:layout_marginBottom="30dp"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:id="@+id/register"
            android:layout_marginBottom="40dp"
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>