<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:inputType="textEmailAddress"
                android:focusable="false"
                android:id="@+id/email"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:id="@+id/name"
                android:inputType="text"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"/>

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:id="@+id/age"
                android:inputType="number"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:id="@+id/weight"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"/>

            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:inputType="numberDecimal"
                android:id="@+id/height"/>

            <Button
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:id="@+id/save"
                android:background="@drawable/rounded_button"/>


        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>