<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="number"
                android:id="@+id/weight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="number"
                android:id="@+id/height"
                android:layout_marginBottom="30dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/calculate"
                android:text="@string/calc_bmi"
                android:textColor="@color/white"/>


            <TextView
                android:visibility="invisible"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="Kwame"
                android:textSize="18sp"
                android:id="@+id/bmi_value"
                android:textColor="@color/black"/>

            <TextView
                android:visibility="invisible"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="Kwame"
                android:textSize="18sp"
                android:id="@+id/bmi_status"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"/>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>