<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize">

          <ImageView
              android:background="?android:attr/selectableItemBackground"
              android:id="@+id/back"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scaleType="centerCrop"
              android:padding="20dp"
              android:layout_marginEnd="5dp"
              android:src="@drawable/ic_arrow_back"
              android:layout_weight="2"
              />

          <TextView
              android:gravity="center_vertical"
              android:layout_weight="1"
              android:id="@+id/bar_title"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              tools:text="Hello World"
              android:maxLines="1"
              android:ellipsize="end"
              android:textSize="20sp"
              android:textColor="@color/white"/>

          <ToggleButton
              android:layout_weight="2.2"
              android:layout_marginStart="10dp"
              android:id="@+id/favourite"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              android:layout_marginEnd="5dp"
              android:textOff=""
              android:focusable="false"
              android:focusableInTouchMode="false"
              android:textOn=""
              android:checked="false"
              android:background="@drawable/toggle"
              />


      </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:cardCornerRadius="2dp"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/image"
                    android:src="@drawable/test"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/test_title"
                    android:textSize="20sp"
                    android:id="@+id/title"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/content"
                    android:textSize="15sp"
                    tools:text="@string/test_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/consult"
                    android:text="@string/consult"
                    />

            </LinearLayout>




        </android.support.v7.widget.CardView>


        </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_share"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/share"
        app:layout_anchorGravity="bottom|right|end" />





</android.support.design.widget.CoordinatorLayout>